--- a/src/components/homepage/AdoptionDogs/AdoptionDogs.module.scss
+++ b/src/components/homepage/AdoptionDogs/AdoptionDogs.module.scss
@@ -64,6 +64,8 @@
 .image {
   width: 100%;
   border-radius: 25px;
+  mask-image: none;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .desktopContent {
