--- a/src/components/shared/ArtistModal/ArtistModal.module.scss
+++ b/src/components/shared/ArtistModal/ArtistModal.module.scss
@@ -52,6 +52,8 @@
 .avatar {
   max-width: 150px;
   border-radius: 25px;
+  mask-image: none;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .description {
@@ -68,6 +70,8 @@
 
 .image {
   border-radius: 25px;
+  mask-image: none;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .socials {
